<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btHome"
            android:id="@+id/btnHome"
            android:layout_weight="1"
            android:onClick="Home"
            />
        <Button
            android:id="@+id/btnConta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btMinhaConta"
            android:layout_weight="1"
            android:onClick="Conta"
            />

        <Button
            android:id="@+id/btnCarrinho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Carrinho"
            android:onClick="Carrinho"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Features"
            android:textSize="20dp"
            />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/v_flipper"
        />
</LinearLayout>

</LinearLayout>